Attachment icons not aligning Bug 1237084

--- a/htdocs/artefact/resume/theme/raw/static/style/style.css
+++ b/htdocs/artefact/resume/theme/raw/static/style/style.css
@@ -31,3 +31,6 @@
 #container #resumewrap table td.errmsg {
     padding-left: 20px;
 }
+th.resumeattachments {
+    width: 30px;
+}
